# ipc_demo

./: CMakeLists.txt  package.xml
include/ipc_demo/: listener.hpp  talker.hpp
launch/: composition.launch.py
src/: listener_component.cpp  manual_composition.cpp  talker_component.cpp
